# Arkanoid_ncurses

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: Ball.hpp  ConsoleViewport.hpp  Game.hpp  GameField.hpp  GameOverScreen.hpp  InputHandler.hpp  Platform.hpp  SidePanel.hpp
src/: Ball.cpp  ConsoleViewport.cpp  Game.cpp  GameField.cpp  GameOverScreen.cpp  InputHandler.cpp  Platform.cpp  SidePanel.cpp  main.cpp
